--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -81,3 +81,95 @@
   publisher={Vision},
   preview={wave-mechanics.gif}
 }
+
+
+@article{kosterev2017development,
+  title={DEVELOPMENT OF 2-DOF ADAPTIVE MECHATRONIC DEVICE WITH CORRECTIVE ADJUSTMENT OF LASER TRACKER REFLECTOR FOR INDUSTRIAL ROBOT CALIBRATION.},
+  author={Kosterev, Dmitrii and Vorotnikov, Andrei and Nedelchev, Simeon and Romash, Elena and Poduraev, Yuri},
+  journal={Annals of DAAAM \& Proceedings},
+  volume={28},
+  year={2017}
+}
+
+@inproceedings{nedelchev2018design,
+  title={Design of robotic gripper with constant transmission ratio based on twisted string actuator: Concept and evaluation},
+  author={Nedelchev, Simeon and Gaponov, Igor and Ryu, Jee-Hwan},
+  booktitle={2018 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  pages={967--972},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{nedelchev2019high,
+  title={High-bandwidth control of twisted string actuators},
+  author={Nedelchev, Simeon and Gaponov, Igor and Ryu, Jee-Hwan},
+  booktitle={2019 International Conference on Robotics and Automation (ICRA)},
+  pages={5359--5364},
+  year={2019},
+  organization={IEEE}
+}
+
+@article{nedelchev2020accurate,
+  title={Accurate dynamic modeling of twisted string actuators accounting for string compliance and friction},
+  author={Nedelchev, Simeon and Gaponov, Igor and Ryu, Jee-Hwan},
+  journal={IEEE Robotics and Automation Letters},
+  volume={5},
+  number={2},
+  pages={3438--3443},
+  year={2020},
+  publisher={IEEE}
+}
+
+@inproceedings{nedelchev2020imu,
+  title={IMU-based Parameter Identification and Position Estimation in Twisted String Actuators},
+  author={Nedelchev, Simeon and Kirsanov, Daniil and Gaponov, Igor},
+  booktitle={2020 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  pages={6311--6317},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{balakhnov2020preliminary,
+  title={Preliminary Study on Slack-Free Model Predictive Control of Twisted String-Based Antagonistic Joints},
+  author={Balakhnov, Oleg and Nedelchev, Simeon and Gaponov, Igor},
+  booktitle={2020 International Conference Nonlinearity, Information and Robotics (NIR)},
+  pages={1--5},
+  year={2020},
+  organization={IEEE}
+}
+
+@article{nedelchev2021energy,
+  title={On Energy-Preserving Motion in Twisted String Actuators},
+  author={Nedelchev, Simeon and Skvortsova, Valeria and Guryev, Boris and Gaponov, Igor and Ryu, Jee-Hwan},
+  journal={IEEE Robotics and Automation Letters},
+  volume={6},
+  number={4},
+  pages={7406--7412},
+  year={2021},
+  publisher={IEEE}
+}
+
+@inproceedings{nedelchev2021smooth,
+  title={On Smooth Time-Optimal Trajectory Planning in Twisted String Actuators},
+  author={Nedelchev, Simeon and Kirsanov, Daniil and Gaponov, Igor and Seong, Hyeonseok and Ryu, Jee-Hwan},
+  booktitle={2021 IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={10107--10113},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{sabirova2021parameter,
+  title={Parameter Identification in Mechanical Systems with Energy-Based Regressor: Preliminary Study},
+  author={Sabirova, Adelia and Nedelchev, Simeon and Gaponov, Igor},
+  booktitle={2021 International Conference" Nonlinearity, Information and Robotics"(NIR)},
+  pages={1--6},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{skvortsova2022design,
+  title={Design, characterisation and validation of a haptic interface based on twisted string actuation.},
+  author={Skvortsova, Valeria and Nedelchev, Simeon and Brown, Joshua and Farkhatdinov, Ildar and Gaponov, Igor},
+  journal={Front Robot AI},
+  year={2022}
+}
