--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,87 +3,88 @@
 
 @string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
-}
+% @book{einstein1956investigations,
+%   bibtex_show={true},
+%   title={Investigations on the Theory of the Brownian Movement},
+%   author={Einstein, Albert},
+%   year={1956},
+%   publisher={Courier Corporation,},
+%   preview={brownian-motion.gif}
+% }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
+% @article{einstein1950meaning,
+%   abbr={AJP},
+%   bibtex_show={true},
+%   title={The meaning of relativity},
+%   author={Einstein, Albert and Taub, AH},
+%   journal={American Journal of Physics,},
+%   volume={18},
+%   number={6},
+%   pages={403--404},
+%   year={1950},
+%   publisher={American Association of Physics Teachers,}
+% }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  selected={true}
-}
+% @article{PhysRev.47.777,
+%   abbr={PhysRev},
+%   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+%   author={Einstein, A. and Podolsky, B. and Rosen, N.},
+%   abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
+%   journal={Phys. Rev.,},
+%   volume={47},
+%   issue={10},
+%   pages={777--780},
+%   numpages={0},
+%   year={1935},
+%   month={May},
+%   publisher=aps,
+%   doi={10.1103/PhysRev.47.777},
+%   url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+%   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+%   pdf={example_pdf.pdf},
+%   altmetric={248277},
+%   selected={true}
+% }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
+% @article{einstein1905molekularkinetischen,
+%   title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
+%   author={Einstein, A.},
+%   journal={Annalen der physik,},
+%   volume={322},
+%   number={8},
+%   pages={549--560},
+%   year={1905},
+%   publisher={Wiley Online Library}
+% }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
+% @article{einstein1905movement,
+%   abbr={Ann. Phys.},
+%   title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
+%   author={Einstein, A.},
+%   journal={Ann. Phys.,},
+%   volume={17},
+%   pages={549--560},
+%   year={1905}
+% }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
+% @article{einstein1905electrodynamics,
+%   title={On the electrodynamics of moving bodies},
+%   author={Einstein, A.},
+%   year={1905}
+% }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
-}
+% @book{przibram1967letters,
+%   bibtex_show={true},
+%   title={Letters on wave mechanics},
+%   author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
+%   year={1967},
+%   publisher={Vision},
+%   preview={wave-mechanics.gif}
+% }
 
 
 @article{kosterev2017development,
+  bibtex_show={true},
   title={DEVELOPMENT OF 2-DOF ADAPTIVE MECHATRONIC DEVICE WITH CORRECTIVE ADJUSTMENT OF LASER TRACKER REFLECTOR FOR INDUSTRIAL ROBOT CALIBRATION.},
   author={Kosterev, Dmitrii and Vorotnikov, Andrei and Nedelchev, Simeon and Romash, Elena and Poduraev, Yuri},
   journal={Annals of DAAAM \& Proceedings},
@@ -92,6 +93,8 @@
 }
 
 @inproceedings{nedelchev2018design,
+  abbr={IROS},
+  bibtex_show={true},
   title={Design of robotic gripper with constant transmission ratio based on twisted string actuator: Concept and evaluation},
   author={Nedelchev, Simeon and Gaponov, Igor and Ryu, Jee-Hwan},
   booktitle={2018 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
@@ -101,6 +104,8 @@
 }
 
 @inproceedings{nedelchev2019high,
+  abbr={ICRA},
+  bibtex_show={true},
   title={High-bandwidth control of twisted string actuators},
   author={Nedelchev, Simeon and Gaponov, Igor and Ryu, Jee-Hwan},
   booktitle={2019 International Conference on Robotics and Automation (ICRA)},
@@ -110,6 +115,8 @@
 }
 
 @article{nedelchev2020accurate,
+  abbr={RAL},
+  bibtex_show={true},
   title={Accurate dynamic modeling of twisted string actuators accounting for string compliance and friction},
   author={Nedelchev, Simeon and Gaponov, Igor and Ryu, Jee-Hwan},
   journal={IEEE Robotics and Automation Letters},
@@ -121,6 +128,8 @@
 }
 
 @inproceedings{nedelchev2020imu,
+  abbr={IROS},
+  bibtex_show={true},
   title={IMU-based Parameter Identification and Position Estimation in Twisted String Actuators},
   author={Nedelchev, Simeon and Kirsanov, Daniil and Gaponov, Igor},
   booktitle={2020 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
@@ -130,6 +139,7 @@
 }
 
 @inproceedings{balakhnov2020preliminary,
+  bibtex_show={true},
   title={Preliminary Study on Slack-Free Model Predictive Control of Twisted String-Based Antagonistic Joints},
   author={Balakhnov, Oleg and Nedelchev, Simeon and Gaponov, Igor},
   booktitle={2020 International Conference Nonlinearity, Information and Robotics (NIR)},
@@ -139,6 +149,8 @@
 }
 
 @article{nedelchev2021energy,
+  abbr={RAL},
+  bibtex_show={true},
   title={On Energy-Preserving Motion in Twisted String Actuators},
   author={Nedelchev, Simeon and Skvortsova, Valeria and Guryev, Boris and Gaponov, Igor and Ryu, Jee-Hwan},
   journal={IEEE Robotics and Automation Letters},
@@ -150,15 +162,20 @@
 }
 
 @inproceedings{nedelchev2021smooth,
+  abbr={ICRA},
+  bibtex_show={true},
   title={On Smooth Time-Optimal Trajectory Planning in Twisted String Actuators},
   author={Nedelchev, Simeon and Kirsanov, Daniil and Gaponov, Igor and Seong, Hyeonseok and Ryu, Jee-Hwan},
   booktitle={2021 IEEE International Conference on Robotics and Automation (ICRA)},
   pages={10107--10113},
   year={2021},
+  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
   organization={IEEE}
 }
 
 @inproceedings{sabirova2021parameter,
+  bibtex_show={true},
   title={Parameter Identification in Mechanical Systems with Energy-Based Regressor: Preliminary Study},
   author={Sabirova, Adelia and Nedelchev, Simeon and Gaponov, Igor},
   booktitle={2021 International Conference" Nonlinearity, Information and Robotics"(NIR)},
@@ -168,8 +185,10 @@
 }
 
 @article{skvortsova2022design,
+  bibtex_show={true},
   title={Design, characterisation and validation of a haptic interface based on twisted string actuation.},
   author={Skvortsova, Valeria and Nedelchev, Simeon and Brown, Joshua and Farkhatdinov, Ildar and Gaponov, Igor},
   journal={Front Robot AI},
   year={2022}
+
 }
