--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -89,8 +89,7 @@
   booktitle={2021 IEEE International Conference on Robotics and Automation (ICRA)},
   pages={10107--10113},
   year={2021},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  html={https://ieeexplore.ieee.org/document/9561400},
   organization={IEEE}
 }
 
