--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,8 @@
   booktitle={2019 International Conference on Robotics and Automation (ICRA)},
   pages={5359--5364},
   year={2019},
-  organization={IEEE}
+  organization={IEEE},
+  selected={true}
 }
 
 @article{nedelchev2020accurate,
@@ -42,7 +43,8 @@
   number={2},
   pages={3438--3443},
   year={2020},
-  publisher={IEEE}
+  publisher={IEEE},
+  selected={true}
 }
 
 @inproceedings{nedelchev2020imu,
